fixed - comments button alignment

--- a/app/styles/modules/_comments.scss
+++ b/app/styles/modules/_comments.scss
@@ -1,33 +1,41 @@
 .comment---project {
     .form--input-text {
         padding-bottom: 1.5em;
+
         input {
             float: left;
             background: transparent;
             width: 80%;
+
             &::placeholder {
                 color: $color-neutral-light;
             }
+
             &:focus {
                 // color: $palette-color-lightens;
                 // background: $palette-color-darken;
                 border-bottom-color: $palette-color-darken;
             }
         }
+
         label {
             // visibility: hidden;
             display: none;
         }
     }
+
     .comment---reply {
         background-color: white;
     }
+
     small {
         color: $color-morning;
     }
+
     input {
         font-size: 1em;
     }
+
     .counter {
         font-weight: bolder;
     }
@@ -38,37 +46,64 @@
         color: $palette-color-lightens;
         border: none;
     }
+
     .comment---reply {
         background-color: transparent;
         border-left: 1px solid $color-neutral-light;
         padding-left: 1em;
+
         blockquote {
             margin-bottom: 0;
             padding-bottom: 1em;
         }
     }
+
     .comment---project {
         button.button-show {
             margin-top: 2em;
         }
-        button.button-reply {
+
+        button.button-reply,
+        button.button-appended {
             margin: 1em 0 0 0;
             border: none;
             border-bottom: 1px solid $color-neutral-light;
             display: block;
-            height: 43px;
-            width: 47px;
+            height: 31px;
+            // width: 47px;
+            padding: .5em 0 0 .5em;
             width: 20%;
+
             i {
                 color: $color-neutral-light;
                 margin-left: -.35em;
             }
+
             &:hover {
                 // border: $palette-color-lightens 1px solid;
                 background: $palette-color-lightens;
+
                 i {
                     color: $palette-color-darken;
                 }
+            }
+        }
+    }
+
+    .-with-input-button {
+        input {
+            width: 80%;
+            float: left;
+            border-bottom: 1px solid $color-neutral-light;
+
+        }
+
+        button.button-appended {
+            width: 20%;
+            height: 31px;
+
+            &.-is-focused {
+                // border-bottom: 1px solid red;
             }
         }
     }
