--- a/app/styles/overrides/override.fixes.scss
+++ b/app/styles/overrides/override.fixes.scss
@@ -107,7 +107,7 @@
 /* Don't use fixed tab content size */
 // TODO: toggle for tab hight debuging
 .content--tab {
-    // height: auto;
+    height: auto;
 }
 
 /* Allow using .taller for textareas throughout the site */
